aaded html to word1

--- a/HTML TO WORD/example.html
+++ b/HTML TO WORD/example.html
@@ -150,7 +150,7 @@ Otra imagen
 <!-- <img src="images/gauss.png"  /> -->
 
 <h2>Probando tablas</h2>
-<div> Una tabla de ejemplo anidada dentro de otro <div> contenedor
+<div> Una tabla de fgghf ejemplo anidada dentro de otro <div> contenedor
 	<table>
 		<thead>
 		<tr>
